# encosmo

./: Design Document.md  README.md
encosmo-client/: Cargo.toml
encosmo-client/content/: sprites.json
encosmo-client/src/: blueprints.rs  components.rs  constants.rs  entities.rs  main.rs  packets.rs  resources.rs  systems.rs
encosmo-server/: Cargo.toml
encosmo-server/src/: connection.rs  details.rs  entities.rs  main.rs  messages.rs  packets.rs  resources.rs  server.rs  systems.rs  utils.rs
encosmo-server/src/states/: entry.rs  mod.rs  state.rs
encosmo-shared/: Cargo.toml
encosmo-shared/src/: lib.rs  server_components.rs
