[package]
name = "encosmo-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
encosmo-shared = { version = "*", path = "../encosmo-shared" }
macroquad = "0.4.13"
serde_json = "1.0.134"
specs = { version = "0.20.0", features = ["derive", "uuid"] }
uuid = { version = "1.11.0", features = ["serde"] }
