[package]
name = "encosmo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
simple_logger = "5.0.0"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
