[package]
name = "encosmo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
encosmo-shared = { version = "*", path = "../encosmo-shared"}

anyhow = "1.0.95"
bimap = "0.6.3"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
simple_logger = "5.0.0"
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
specs = { version = "0.20.0", features = ["derive", "uuid"] }
